# crewdock

./: .dockerignore  .gitignore  README.md  _shared.env.example  pyproject.toml
agents/: hermes.yaml
crew/: cli.py
crew/core/: compose.py  credentials.py  creds.py  deployment.py  docker.py  errors.py  expose.py  gateway.py  ids.py  init.py  manager.py  manifest.py  models.py  paths.py  petnames.py  ports.py  tz.py
crew/gateway/: Dockerfile  broker.Dockerfile  broker.py  discovery.py  router.py  routing.py  signin.py  theme.py
crew/templates/: compose.yaml.j2
docs/: multi-user.md
instances/: _shared.env.example
instances/_template/: config.yaml
layers/knowledge/: README.md
seed/: config.yaml
tests/: conftest.py  test_cli.py  test_compose.py  test_credentials.py  test_creds.py  test_deployment.py  test_docker.py  test_expose.py  test_gateway.py  test_gateway_broker.py  test_gateway_discovery.py  test_gateway_router.py  test_gateway_routing.py  test_gateway_signin.py  test_ids.py  test_init.py  test_manager.py  test_manifest.py  test_models.py  test_paths.py  test_petnames.py  test_ports.py
