[project]
name = "crewdock"
version = "0.5.0"
description = "Host a crew of isolated AI-assistant agent containers from one CLI."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "filelock>=3.13",
    "aiohttp>=3.10",
]

[project.scripts]
crew = "crew.cli:app"
crew-gateway-router = "crew.gateway.router:main"
crew-gateway-broker = "crew.gateway.broker:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-aiohttp>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
